--- a/cattle/templates/cattle/index.html
+++ b/cattle/templates/cattle/index.html
@@ -1,16 +1,68 @@
 {% extends "cattle/layout.html" %}
 
+{% load static %}
+
 {% block body %}
-    <h1>
-        All Cattles
-    </h1>
-    <ul>
-        {% for cattle in cattles %}
-            <li>
-                <ul>Cattle ID  = {{ cattle.id }}</ul>
-                <ul>Cattle Weight = {{ cattle.weight }}</ul>
-                <ul>Cattle Entrace Date = {{ cattle.entrance_data }}</ul>
-            </li>
-        {% endfor %}
-    </ul>
-{% endblock %}
+    <link href="{% static 'cattle/style.css' %}" rel="stylesheet" >    
+    <div class="hero">
+    <h2>Save Cattle</h2>
+        <form action="{% url 'cattle:save' %}" method="post">
+            {% csrf_token %}
+            {{ cattle_form.as_p }}
+            <input type="submit">
+        </form>
+    </div>
+    <div class="hero">
+        <h2>Save Stable</h2>
+            <form action="{% url 'stable:save' %}" method="post">
+                {% csrf_token %}
+                {{ stable_form.as_p }}
+                <input type="submit">
+            </form>
+    </div>    
+    <div class="services">
+        <h2>Get according to weight</h2>
+        <form action="{% url 'cattle:weight' %}" method="post">
+            {% csrf_token %}
+            {{ cattle_form.as_p }}
+            <input type="submit">
+        </form>
+    </div>
+    <div class="footer">
+        
+        <h1>
+            All Data
+        </h1>
+        <h2>Cattles</h2>
+        <ul>
+            {% for cattle in cattles %}
+                <li>
+                    <ul>Cattle ID  = {{ cattle.id }}</ul>
+                    <ul>Cattle Weight = {{ cattle.weight }}</ul>
+                    <ul>Cattle Entrace Date = {{ cattle.entrance_data }}</ul>
+                    <ul>Current Stable = {{ cattle.stable.name }}</ul>
+                </li>
+            {% empty %}
+                <li>No Cattle</li>
+            {% endfor %}
+        </ul>
+    
+    <br><br>
+        <h2>
+            Stables
+        </h2>
+        <ul>
+            {% for stable in stables %}
+                <li>
+                    <ul>Stable ID  = {{ stable.id }}</ul>
+                    <ul>Stable Name = {{ stable.name }}</ul>
+                    <ul>Stable Capacity = {{ stable.capacity }}</ul>
+                    <ul>Stable Address = {{ stable.address }}</ul>
+                </li>
+            {% empty %}
+                <li>No Stable</li>
+            {% endfor %}
+        </ul>
+    </div>
+    
+    {% endblock %}
